--- a/project.html
+++ b/project.html
@@ -93,58 +93,58 @@ img{
   
 </div>
     <div class='project'>
-  <a href='project-9/project(9).html'>
+  <a href='project(9).html'>
     <img src='blog.png'></img>
   </a>
   <h5>Poké Blog-Website</h5>
 </div>
 <div class='project'>
-  <a href='project-3/project(3).html'>
+  <a href='project(3).html'>
     <img src='Spotify.png'></img>
   </a>
   <h5>Spotify-Clone</h5>
 </div>
 <div class='project'>
-  <a href='/project-5/project(5).html'>
+  <a href='project(5).html'>
   <img src='quiz.png'></img>
   </a>
   <h5>Poké Quiz</h5>
 </div>
 <div class='project'>
-  <a href='/project-6/project(6).html'>
+  <a href='project(6).html'>
     <img src='starShip.png'>
   </a>
   <h5>Space Shooter Game</h5>
 </div>
 <div class='project'>
-  <a href='/project-7/project(7).html'>
+  <a href='project(7).html'>
       <img src='weather.png'></img>
 
   </a>
   <h5>Weather App</h5>
 </div>
 <div class='project'>
-  <a href='/project-8/project(8).html'>
+  <a href='project(8).html'>
     <img src='dict.png'></img>
   </a>
   <h5>Dictionary App</h5>
 </div>
 
  <div class='project'>
-   <a href='project-1/project(1).html'>
+   <a href='project(1).html'>
   <img src='Netflix.png'></img>
   </a>
   <h5>Netflix-Clone</h5>
   
 </div>
 <div class='project'>
-  <a href='project-2/project(2).html'>
+  <a href='project(2).html'>
   <img src='calc.png'></img>
   </a>
   <h5>Calculator</h5>
 </div>
 <div class='project'>
-  <a href='project-4/project(4).html'>
+  <a href='project(4).html'>
   <img src='toDo.png'></img>
   </a>
   <h5>To do List</h5>
