--- a/project(3).html
+++ b/project(3).html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Spotify-Clone</title>
-  <link href="/project-3/ project(3).css" rel="stylesheet" type="text/css" />
+  <link href="project(3).css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -45,7 +45,7 @@
       </div>
     </div>
   </main>
-  <script src="/project-3/project(3).js"></script>
+  <script src="project(3).js"></script>
 </body>
 
 </html>
