--- a/project(4).html
+++ b/project(4).html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>To do list app</title>
-  <link href="/project-4/project(4).css" rel="stylesheet" type="text/css" />
+  <link href="project(4).css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <button>Add</button>
   </div>
 <div class="tasks"></div>
-  <script src="/project-4/project(4).js"></script>
+  <script src="project(4).js"></script>
 </body>
 
 </html>
