--- a/project(5).html
+++ b/project(5).html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Quiz App</title>
-  <link href="/project-5/project(5).css" rel="stylesheet" type="text/css" />
+  <link href="project(5).css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -45,7 +45,7 @@
     </div>
   </div>
 
-  <script src="/project-5/project(5).js"></script>
+  <script src="project(5).js"></script>
 </body>
 
 </html>
