--- a/project(5).html
+++ b/project(5).html
@@ -35,7 +35,7 @@
       <div id='rule'>
         <h2>Rules</h2>
 
-        <h4>• There are 20 questions</h4>
+        <h4>• There are multiple questions</h4>
         <h4>• You have 5 seconds for each question</h4>
         <h4>• Correct Answer will give you 10 points</h4>
         <h4>• Wrong Answer will deduct 5 points</h4>
