--- a/project(6).html
+++ b/project(6).html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>StarShip Sawior</title>
-  <link href="/project-6/project(6).css" rel="stylesheet" type="text/css" />
+  <link href="project(6).css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
       <img src='spaceShip.png' width='70px' id='spaceship'>
     </div>
   </div>
-  <script src="/project-6/project(6).js"></script>
+  <script src="project(6).js"></script>
 </body>
 
 </html>
