--- a/project(7).html
+++ b/project(7).html
@@ -11,7 +11,7 @@
   
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="/project-7/project(7).css">
+  <link rel="stylesheet" href="project(7).css">
 </head>
 
 <body>    
@@ -50,7 +50,7 @@
   </div>
 </div>
 </div>
-  <script src="/project-7/project(7).js"></script>
+  <script src="project(7).js"></script>
   
 </body>
 </html>
