--- a/project(8).html
+++ b/project(8).html
@@ -11,7 +11,7 @@
   
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="/project-8/project(8).css">
+  <link rel="stylesheet" href="project(8).css">
 </head>
 
 <body>
@@ -30,6 +30,6 @@
   <footer>
     <div>@ Developer Fidaur 2024-2025</div>
   </footer>
-  <script src="/project-8/project(8).js"></script>
+  <script src="project(8).js"></script>
 </body>
 </html>
