--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   
 
   <link rel="stylesheet" href="contact.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="project(9).css">
   <style>
   #contact {
     text-decoration: underline;
