--- a/blogpost.html
+++ b/blogpost.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title></title>
- <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="project(9).css">
  <link rel="stylesheet" href="blogpost.css">
 </head>
 
@@ -111,7 +111,7 @@
    <span>Copyright © @PokéBlog.com</span>
  </footer>
  <script src="blog.js"></script>
- <script src="main.js"></script>
+ <script src="project(9).js"></script>
 </body>
 
 </html>
