--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <img src='/IMG_20241012_112915.jpg'>
     <nav>
       <ul>
-        <li><a href='index.html'>Home</a></li>
+        <li><a href='project(9).html'>Home</a></li>
         <li><a href='about.html'>About</a></li>
         <li><a href='contact.html'id ='contact'>Contact</a></li>
       </ul>
