--- a/search.html
+++ b/search.html
@@ -18,7 +18,7 @@
     <img src='/IMG_20241012_112915.jpg'>
     <nav>
       <ul>
-        <li><a href='index.html'>Home</a></li>
+        <li><a href='project(9).html'>Home</a></li>
         <li><a href='about.html'>About</a></li>
         <li><a href='contact.html'>Contact</a></li>
       </ul>
