--- a/project(9).html
+++ b/project(9).html
@@ -23,7 +23,7 @@
     <img src='/IMG_20241012_112915.jpg'>
     <nav>
       <ul>
-        <li><a href='index.html' id='home'>Home</a></li>
+        <li><a href='project(9).html' id='home'>Home</a></li>
         <li><a href='about.html'>About</a></li>
         <li><a href='contact.html'>Contact</a></li>
       </ul>
