--- a/project(9).html
+++ b/project(9).html
@@ -9,7 +9,7 @@
   
   
 
-  <link rel="stylesheet" href="project(9).css">
+  <link rel="stylesheet" href="/project-9/project(9).css">
   <style>
   #home{
     text-decoration: underline;
@@ -20,7 +20,8 @@
 
 <body>
   <header>
-    <img src='/IMG_20241012_112915.jpg'>
+    <img src='IMG_20241012_112915.jpg'>
+    <div id='left'>
     <nav>
       <ul>
         <li><a href='project(9).html' id='home'>Home</a></li>
@@ -34,12 +35,13 @@
       <button>Search</button>
     </a>
     </div>
+    </div>
     <div id='line'></div>
   </header>
  <main>
    <div class='content'>
    <div class='card'>
-     <img src='/image_search_1731759181698.png' class='content-below'>
+     <img src='image_search_1731759181698.png' class='content-below'>
      <div class='content-top'>
      <h1>The platform for Pokémon trainers</h1>
      <h5>Pokémon invites fans into an exciting world where you can capture, train, and battle unique creatures. With thousands of Pokémon, each with special abilities and types, the journey to become a Pokémon Master is thrilling and strategic. From classic games to the animated series, Pokémon's charm and adventure continue to capture the hearts of fans worldwide!</h5>
@@ -52,105 +54,105 @@
      <h1>Featured Articles</h1>
      <div class='article'>
      <div class='article-img'>
-       <img src='/image_search_1731681527063.jpg'>
+       <img src='image_search_1731681527063.jpg'>
      </div>
      <div class='article-content'>
        <a href='blogpost.html'>
        <h3>How to Become a Pokémon Trainer?</h3>
        </a>
-       <div class='author'>-Author Name</div>
-       <p>4th November | Read in 6 min</p>
+       <div class='author'>-Professor Oak</div>
+       <p>4th December | Read in 6 min</p>
      </div>
      </div>
      <div class='article'>
      <div class='article-img'>
-       <img src='/image_search_1731681647862.png'>
+       <img src='image_search_1731681647862.png'>
      </div>
      <div class='article-content'>
       <a href='blogpost.html'>
         <h3>Ranking the Pokémon Starters: Which Region Has the Best Choices?</h3>
         </a>
-        <div class='author'>-Author Name</div>
-       <p>4th November | Read in 6 min</p>
+        <div class='author'>-Professor Kukui</div>
+       <p>9th November | Read in 3 min</p>
      </div>
      </div>
      
       <div class='article'>
    <div class='article-img'>
-     <img src='/image_search_1731681710166.jpg'>
+     <img src='image_search_1731681710166.jpg'>
    </div>
    <div class='article-content'>
      <a href='blogpost.html'>
        <h3>A Beginner’s Guide to Competitive Pokémon Battling</h3>
      </a>
-     <div class='author'>-Author Name</div>
-     <p>4th November | Read in 6 min</p>
+     <div class='author'>-Professor Sycamore</div>
+     <p>4th November | Read in 3 min</p>
    </div>
  </div>
  
   <div class='article'>
    <div class='article-img'>
-     <img src='/image_search_1731759304938.png'>
+     <img src='image_search_1731759304938.png'>
    </div>
    <div class='article-content'>
      <a href='blogpost.html'>
        <h3>What is a pokemon</h3>
      </a>
-     <div class='author'>-Author Name</div>
-     <p>4th November | Read in 6 min</p>
+     <div class='author'>-Professor Juniper</div>
+     <p>4th November | Read in 3 min</p>
    </div>
  </div>
  
   <div class='article'>
    <div class='article-img'>
-     <img src='/image_search_1731759453642.jpg'>
+     <img src='image_search_1731759453642.jpg'>
    </div>
    <div class='article-content'>
      <a href='blogpost.html'>
        <h3>Which is Ash's Best Companion?</h3>
      </a>
-     <div class='author'>-Author Name</div>
-     <p>4th November | Read in 6 min</p>
+     <div class='author'>-Professpor Birch</div>
+     <p>4th November | Read in 2 min</p>
    </div>
  </div>
  
   <div class='article'>
    <div class='article-img'>
-     <img src='/image_search_1731759546677.jpg'>
+     <img src='image_search_1731759546677.jpg'>
    </div>
    <div class='article-content'>
      <a href='blogpost.html'>
        <h3>Legendary and Mythical Pokémon</h3>
        </a>
        
-     <div class='author'>-Author Name</div>
+     <div class='author'>-Ash Ketchum</div>
      <p>4th November | Read in 6 min</p>
    </div>
  </div>
  
   <div class='article'>
    <div class='article-img'>
-     <img src='/image_search_1731759723777.jpg'>
+     <img src='image_search_1731759723777.jpg'>
    </div>
    <div class='article-content'>
      <a href='blogpost.html'>
        <h3>Pokemon's evolution</h3>
      </a>
-     <div class='author'>-Author Name</div>
-     <p>4th November | Read in 6 min</p>
+     <div class='author'>-Champion Alain</div>
+     <p>13th November | Read in 2 min</p>
    </div>
  </div>
  
   <div class='article'>
    <div class='article-img'>
-     <img src='/image_search_1731759833893.png'>
+     <img src='image_search_1731759833893.png'>
    </div>
    <div class='article-content'>
      <a href='blogpost.html'>
        <h3>Different Regions and their Journeys</h3>
      </a>
-     <div class='author'>-Author Name</div>
-     <p>4th November | Read in 6 min</p>
+     <div class='author'>-Champion Cynthia</div>
+     <p>4th February | Read in 2 min</p>
    </div>
  </div>
  
@@ -159,6 +161,6 @@
  <footer>
    <span>Copyright © @PokéBlog.com</span>
  </footer>
-  <script src="project(9).js"></script>
+  <script src="/project-9/project(9).js"></script>
 </body>
 </html>
