--- a/project(9).html
+++ b/project(9).html
@@ -9,7 +9,7 @@
   
   
 
-  <link rel="stylesheet" href="/project-9/project(9).css">
+  <link rel="stylesheet" href="project(9).css">
   <style>
   #home{
     text-decoration: underline;
@@ -161,6 +161,6 @@
  <footer>
    <span>Copyright © @PokéBlog.com</span>
  </footer>
-  <script src="/project-9/project(9).js"></script>
+  <script src="project(9).js"></script>
 </body>
 </html>
