--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
 
 <body>
   <header>
-    <img src='/IMG_20241012_112915.jpg'>
+    <img src='IMG_20241012_112915.jpg'>
     <nav>
       <ul>
         <li><a href='project(9).html'>Home</a></li>
@@ -44,8 +44,8 @@
           <a href='blogpost.html'>
             <h3></h3>
           </a>
-          <div class='author'>-Author Name</div>
-          <p>4th November | Read in 6 min</p>
+          <div class='author'>-Professor Oak</div>
+          <p>4th November | Read in 1 min</p>
         </div>
       </div>
       <div class='article'>
@@ -56,7 +56,72 @@
           <a href='blogpost.html'>
             <h3></h3>
           </a>
-          <div class='author'>-Author Name</div>
+          <div class='author'>-Mr. Clemon</div>
+          <p>4th February | Read in 4 min</p>
+        </div>
+      </div>
+
+      <div class='article'>
+        <div class='article-img'>
+          <img src='home.svg'>
+        </div>
+        <div class='article-content'>
+          <a href='blogpost.html'>
+            <h3></h3>
+          </a>
+          <div class='author'>-Professor Kukui</div>
+          <p>5th December | Read in 5 min</p>
+        </div>
+      </div>
+
+      <div class='article'>
+        <div class='article-img'>
+          <img src='home.svg'>
+        </div>
+        <div class='article-content'>
+          <a href='blogpost.html'>
+            <h3></h3>
+          </a>
+          <div class='author'>-Champion Alain</div>
+          <p>8th November | Read in 2 min</p>
+        </div>
+      </div>
+
+      <div class='article'>
+        <div class='article-img'>
+          <img src='home.svg'>
+        </div>
+        <div class='article-content'>
+          <a href='blogpost.html'>
+            <h3></h3>
+          </a>
+          <div class='author'>-Professor Sycamore</div>
+          <p>9th January | Read in 3 min</p>
+        </div>
+      </div>
+
+      <div class='article'>
+        <div class='article-img'>
+          <img src='home.svg'>
+        </div>
+        <div class='article-content'>
+          <a href='blogpost.html'>
+            <h3></h3>
+          </a>
+          <div class='author'>-Professor Juniper</div>
+          <p>2nd November | Read in 3 min</p>
+        </div>
+      </div>
+
+      <div class='article'>
+        <div class='article-img'>
+          <img src='home.svg'>
+        </div>
+        <div class='article-content'>
+          <a href='blogpost.html'>
+            <h3></h3>
+          </a>
+          <div class='author'>-Ash Ketchum</div>
           <p>4th November | Read in 6 min</p>
         </div>
       </div>
@@ -69,73 +134,8 @@
           <a href='blogpost.html'>
             <h3></h3>
           </a>
-          <div class='author'>-Author Name</div>
-          <p>4th November | Read in 6 min</p>
-        </div>
-      </div>
-
-      <div class='article'>
-        <div class='article-img'>
-          <img src='home.svg'>
-        </div>
-        <div class='article-content'>
-          <a href='blogpost.html'>
-            <h3></h3>
-          </a>
-          <div class='author'>-Author Name</div>
-          <p>4th November | Read in 6 min</p>
-        </div>
-      </div>
-
-      <div class='article'>
-        <div class='article-img'>
-          <img src='home.svg'>
-        </div>
-        <div class='article-content'>
-          <a href='blogpost.html'>
-            <h3></h3>
-          </a>
-          <div class='author'>-Author Name</div>
-          <p>4th November | Read in 6 min</p>
-        </div>
-      </div>
-
-      <div class='article'>
-        <div class='article-img'>
-          <img src='home.svg'>
-        </div>
-        <div class='article-content'>
-          <a href='blogpost.html'>
-            <h3></h3>
-          </a>
-          <div class='author'>-Author Name</div>
-          <p>4th November | Read in 6 min</p>
-        </div>
-      </div>
-
-      <div class='article'>
-        <div class='article-img'>
-          <img src='home.svg'>
-        </div>
-        <div class='article-content'>
-          <a href='blogpost.html'>
-            <h3></h3>
-          </a>
-          <div class='author'>-Author Name</div>
-          <p>4th November | Read in 6 min</p>
-        </div>
-      </div>
-
-      <div class='article'>
-        <div class='article-img'>
-          <img src='home.svg'>
-        </div>
-        <div class='article-content'>
-          <a href='blogpost.html'>
-            <h3></h3>
-          </a>
-          <div class='author'>-Author Name</div>
-          <p>4th November | Read in 6 min</p>
+          <div class='author'>-Champion Cynthia</div>
+          <p>6th February | Read in 6 min</p>
         </div>
       </div>
 
@@ -174,14 +174,14 @@ document.querySelector('#search').querySelector('button').addEventListener("clic
 "Pokemon's Evolution",
   ]
  let images=[
-   "/image_search_1731681527063.jpg",
-   "/image_search_1731759833893.png",
-   "/image_search_1731759546677.jpg",
-   "/image_search_1731759453642.jpg",
-   "/image_search_1731759304938.png",
-   "/image_search_1731681710166.jpg",
-   "/image_search_1731681647862.png",
-   "/image_search_1731759723777.jpg"
+   "image_search_1731681527063.jpg",
+   "image_search_1731759833893.png",
+   "image_search_1731759546677.jpg",
+   "image_search_1731759453642.jpg",
+   "image_search_1731759304938.png",
+   "image_search_1731681710166.jpg",
+   "image_search_1731681647862.png",
+   "image_search_1731759723777.jpg"
    ]
 
     function findResults(searchInput) {
@@ -246,8 +246,8 @@ document.querySelector('#search').querySelector('button').addEventListener("clic
           <a href='blogpost.html'>
             <h3>${title}</h3>
           </a>
-          <div class='author'>-Author Name</div>
-          <p>4th November | Read in 6 min</p>
+          <div class='author'>-Professor Oak</div>
+          <p>4th January | Read in 6 min</p>
         </div>
       </div>`
     }
@@ -261,42 +261,42 @@ document.querySelector('#search').querySelector('button').addEventListener("clic
   {
     title: 'How to Become a Pokémon Trainer?',
     content: 'A *Pokemon Trainer* is someone who embarks on a journey to capture, train, and battle Pokemon, aiming to become a Pokemon master. Equipped with Pokeballs, a Pokedex, and a passion for adventure, trainers travel through various regions, encountering diverse Pokemon species and other trainers. Their role goes beyond battles, as they must build strong bonds with their Pokemon, understanding each creature’s strengths, weaknesses, and unique abilities. Trainers compete in gyms, participate in tournaments, and strive to earn badges, constantly improving their skills and expanding their team. Driven by a love for Pokemon and a desire to test their limits, Pokemon trainers are always ready for new challenges in the vibrant world of Pokemon.',
-    img: "/image_search_1731681527063.jpg"
+    img: "image_search_1731681527063.jpg"
   },
   {
     title: 'Different Regions and their Journeys',
     content: 'The Pokemon world is divided into several unique regions, each with its own geography, Pokemon species, culture, and adventures. From the lush fields of Kanto to the icy peaks of Sinnoh, each region offers a fresh journey for aspiring trainers. In Unova, trainers explore bustling cities, while in Alola, they enjoy a tropical island adventure. Each region introduces distinct gym leaders, elite trainers, and challenges that test a trainer’s skills. As trainers journey through these regions, they not only capture new Pokemon but also uncover rich histories, legends, and friendships that shape their growth as Pokemon masters.',
-    img: "/image_search_1731759833893.png"
+    img: "image_search_1731759833893.png"
   },
   {
     title: 'Legendary and Mythical Pokémon',
     content: 'Legendary and Mythical Pokemon are among the most mysterious and powerful creatures in the Pokemon universe. In the anime, these Pokemon often play crucial roles in preserving balance and protecting the world. From Mewtwo’s philosophical conflict in *The First Movie* to Lugia’s role as the guardian of the seas in *The Power of One*, these Pokemon are central to the series’ most dramatic moments. Mythical Pokemon like Jirachi and Celebi often appear with magical abilities, bridging the gap between the past and future. Their appearances are rare, making their encounters unforgettable for fans and trainers alike.',
-    img: "/image_search_1731759546677.jpg"
+    img: "image_search_1731759546677.jpg"
   },
   {
     title: "Which is Ash's Best Companion?",
     content: 'Throughout his journey, Ash Ketchum has traveled with many companions, each contributing to his growth as a trainer. From Brock’s culinary skills and wisdom to Misty’s fiery determination, these characters have been integral to Ash’s adventures. However, Pikachu stands out as Ash’s closest and most loyal companion. Together, they have faced countless challenges, forming an unbreakable bond that defines the series. While every companion brings unique qualities, Pikachu’s unwavering support and synergy with Ash make it the ultimate partner in his journey to becoming a Pokemon master.',
-    img: "/image_search_1731759453642.jpg"
+    img: "image_search_1731759453642.jpg"
   },
   {
     title: 'What is a Pokemon',
     content: '*Pokemon* are extraordinary creatures with unique abilities, living in harmony with humans in the Pokemon world. These creatures come in various shapes, sizes, and elemental types, such as Fire, Water, Electric, and Grass. Each Pokemon has its strengths and weaknesses, making them valuable partners in battles and adventures. Trainers capture Pokemon using Pokeballs, nurture them, and train them to grow stronger. Beyond battles, Pokemon are companions, friends, and sometimes even life-savers, showcasing their loyalty and bond with their trainers. The world of Pokemon thrives on the interaction between humans and these fascinating creatures.',
-    img: "/image_search_1731759304938.png"
+    img: "image_search_1731759304938.png"
   },
   {
     title: 'A Beginner’s Guide to Competitive Pokémon Battling',
     content: 'Competitive Pokemon battling is a strategic and thrilling aspect of the Pokemon world, where trainers test their skills in structured battles. Beginners should start by understanding the basics of Pokemon types, strengths, and weaknesses. Building a balanced team with diverse abilities is crucial. Learn about moves, abilities, and items that enhance battle strategies. Familiarize yourself with battle formats, such as Singles and Doubles, and practice predicting opponents’ moves. Finally, patience and practice are key—study battles, experiment with strategies, and refine your skills. Competitive battling is as much about strategy as it is about understanding your Pokemon’s potential.',
-    img: "/image_search_1731681710166.jpg"
+    img: "image_search_1731681710166.jpg"
   },
   {
     title: 'Ranking the Pokémon Starters: Which Region Has the Best Choices?',
     content: 'Pokemon starters are the first companions of any trainer, and each region offers three iconic choices. Kanto’s Bulbasaur, Charmander, and Squirtle are fan favorites for their versatility. Johto’s Chikorita, Cyndaquil, and Totodile exude charm and balance. Hoenn’s Treecko, Torchic, and Mudkip offer excellent battle potential, while Sinnoh’s Turtwig, Chimchar, and Piplup are beloved for their designs. Alola’s starters bring unique secondary typings, and Galar’s starters reflect modern creativity. While opinions vary, Hoenn’s starters are often ranked highly due to their competitive viability and wide appeal. Ultimately, the “best” starter depends on a trainer’s preferences and strategies.',
-    img: "/image_search_1731681647862.png"
+    img: "image_search_1731681647862.png"
   },
   {
     title: "Pokemon's Evolution",
     content: "Pokemon evolution is a fascinating process where Pokemon transform into stronger forms, gaining new abilities, improved stats, and sometimes even changing their type. Evolution can occur through various methods, such as gaining experience in battles, using specific evolutionary stones, or trading with other trainers. For example, Charmander evolves into Charmeleon and then Charizard, growing significantly stronger with each stage. Evolution not only makes Pokemon more powerful but also unlocks new moves and strategies. However, some trainers choose to delay evolution to learn moves earlier or keep their Pokemon in a form they prefer. This unique feature adds depth and strategy to the world of Pokemon.",
-    img: "/image_search_1731759723777.jpg"
+    img: "image_search_1731759723777.jpg"
 }
 
 ];
