--- a/blogpost.html
+++ b/blogpost.html
@@ -40,9 +40,9 @@
 <div class='author'>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp-Md Fidaur</div>
        <p>11th January | Read in 2 min</p>  
        <div class='social-media-handles'>
-         <img src='/project-9/twitter-154-svgrepo-com.svg'>
-         <img src='/project-9/linkedin-svgrepo-com.svg'>
-         <img src='/project-9/facebook-svgrepo-com.svg'>
+         <img src='twitter-154-svgrepo-com.svg'>
+         <img src='linkedin-svgrepo-com.svg'>
+         <img src='facebook-svgrepo-com.svg'>
        </div>
        </div>
        
