--- a/project(9).html
+++ b/project(9).html
@@ -61,7 +61,7 @@
        <h3>How to Become a Pokémon Trainer?</h3>
        </a>
        <div class='author'>-Professor Oak</div>
-       <p>4th December | Read in 6 min</p>
+       <p>4th December | Read in 6 m</p>
      </div>
      </div>
      <div class='article'>
@@ -73,7 +73,7 @@
         <h3>Ranking the Pokémon Starters: Which Region Has the Best Choices?</h3>
         </a>
         <div class='author'>-Professor Kukui</div>
-       <p>9th November | Read in 3 min</p>
+       <p>9th November | Read in 3 m</p>
      </div>
      </div>
      
@@ -86,7 +86,7 @@
        <h3>A Beginner’s Guide to Competitive Pokémon Battling</h3>
      </a>
      <div class='author'>-Professor Sycamore</div>
-     <p>4th November | Read in 3 min</p>
+     <p>4th November | Read in 3 m</p>
    </div>
  </div>
  
@@ -99,7 +99,7 @@
        <h3>What is a pokemon</h3>
      </a>
      <div class='author'>-Professor Juniper</div>
-     <p>4th November | Read in 3 min</p>
+     <p>4th November | Read in 3 m</p>
    </div>
  </div>
  
@@ -112,7 +112,7 @@
        <h3>Which is Ash's Best Companion?</h3>
      </a>
      <div class='author'>-Professpor Birch</div>
-     <p>4th November | Read in 2 min</p>
+     <p>4th November | Read in 2 m</p>
    </div>
  </div>
  
@@ -126,7 +126,7 @@
        </a>
        
      <div class='author'>-Ash Ketchum</div>
-     <p>4th November | Read in 6 min</p>
+     <p>4th November | Read in 6 m</p>
    </div>
  </div>
  
@@ -139,7 +139,7 @@
        <h3>Pokemon's evolution</h3>
      </a>
      <div class='author'>-Champion Alain</div>
-     <p>13th November | Read in 2 min</p>
+     <p>13th November | Read in 2 m</p>
    </div>
  </div>
  
@@ -152,7 +152,7 @@
        <h3>Different Regions and their Journeys</h3>
      </a>
      <div class='author'>-Champion Cynthia</div>
-     <p>4th February | Read in 2 min</p>
+     <p>4th February | Read in 2 m</p>
    </div>
  </div>
  
