--- a/blogpost.html
+++ b/blogpost.html
@@ -38,7 +38,7 @@
       </p>
       <div class='blog-author'>
 <div class='author'>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp-Md Fidaur</div>
-       <p>11th January | Read in 2 min</p>  
+       <p>11th January | Read in 2m </p>  
        <div class='social-media-handles'>
          <img src='twitter-154-svgrepo-com.svg'>
          <img src='linkedin-svgrepo-com.svg'>
@@ -60,7 +60,7 @@
          <h3>Pokemon's evolution</h3>
         </a>
         <div class='author'>-Professor Birch</div>
-<p>21st January | Read in 5 min</p>
+<p>21st January | Read in 5 m</p>
       </div>
     </div>
     
@@ -73,7 +73,7 @@
         <h3>Ranking the Pokémon Starters: Which Region Has the Best Choices?</h3>
         </a>
         <div class='author'>-Professor Sycamore</div>
-      <p>14th January | Read in 4 min</p>
+      <p>14th January | Read in 4 m</p>
      </div>
      </div>
      
@@ -86,7 +86,7 @@
        <h3>A Beginner’s Guide to Competitive Pokémon Battling</h3>
      </a>
      <div class='author'>-Ash Ketchum</div>
-   <p>31st January | Read in 6 min</p>
+   <p>31st January | Read in 6 m</p>
    </div>
  </div>
  
@@ -99,7 +99,7 @@
        <h3>What is a pokemon</h3>
      </a>
      <div class='author'>-Professor Oak</div>
-     <p>24th January | Read in 1 min</p>
+     <p>24th January | Read in 1 m</p>
    </div>
  </div>
  
