--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
       </div>
       <div class="g-recaptcha" data-sitekey="6Ld5BvEqAAAAAL4bMgqoxgNM4ANsDlf914aGxhN4"></div> <!-- replace with your recaptcha SITE key not secret key -->
 <br />
-      <button type='submit'>Send Message</button>
+      <button class="g-recaptcha" 
+        data-sitekey="reCAPTCHA_site_key" 
+        data-callback='onSubmit' 
+        data-action='submit'>Send Message</button>
  </form>
   </div>
  </main>
