--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="g-recaptcha" data-sitekey="6Ld5BvEqAAAAAL4bMgqoxgNM4ANsDlf914aGxhN4"></div> <!-- replace with your recaptcha SITE key not secret key -->
 <br />
       <button class="g-recaptcha" 
-        data-sitekey="reCAPTCHA_site_key" 
+        data-sitekey="6Ld5BvEqAAAAAL4bMgqoxgNM4ANsDlf914aGxhN4" 
         data-callback='onSubmit' 
         data-action='submit'>Send Message</button>
  </form>
