--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <textarea name="message" rows="6" cols="24" placeholder='Your Message' name='message'>
 </textarea>
       </div>
- <div class="g-recaptcha" data-sitekey="your_site_key"></div> <!-- replace with your recaptcha SITE key not secret key -->
+ <div class="g-recaptcha" data-sitekey="6Ld5BvEqAAAAAL4bMgqoxgNM4ANsDlf914aGxhN4"></div> <!-- replace with your recaptcha SITE key not secret key -->
       <br/>
 
       <button class="g-recaptcha" 
